# visual_servo_tag

./: .gitignore  AGENTS.md  README.md  To do summary.md  memory.md  package.xml  setup.py
config/: controllers.yaml  velocity_servo_tag.yaml
docs/: SIMULINK_VALIDATION_GUIDE.md
launch/: fr3_hardware.launch.py  full_system.launch.py  velocity_servo_tag.launch.py  vision_double.launch.py
simulink/: init_single_camera_xy_tracking.m  single_camera_xy_tracking.slx  single_camera_xy_tracking.slx.autosave  single_camera_xy_tracking.slxc
simulink/config/: stereo_ibvs_config.m  stereo_ibvs_config_v3.m  stereo_ibvs_core.slxc  stereo_ibvs_ros2_stage1.slxc
simulink/config/urdf/: fr3.urdf
simulink/core/: connect_stereo_ibvs_core_stage1.m  connect_stereo_ibvs_core_stage1_v2.m  connect_stereo_ibvs_core_stage1_v3.m  connect_stereo_ibvs_core_stage1_v4.m  connect_stereo_ibvs_core_stage1_v5.m  stereo_ibvs_core.slx  stereo_ibvs_core.slx.autosave  stereo_ibvs_core.slxc
simulink/core/backup/: stereo_ibvs_core_backup_20260724_005942.slx  stereo_ibvs_core_backup_20260724_010158.slx  stereo_ibvs_core_backup_20260724_010315.slx  stereo_ibvs_core_backup_20260724_020023.slx  stereo_ibvs_core_backup_20260724_032606.slx  stereo_ibvs_core_backup_20260724_033541.slx  stereo_ibvs_core_backup_20260724_112816.slx  stereo_ibvs_core_before_04_kinematics_20260723_210007.slx  stereo_ibvs_core_before_04_kinematics_20260723_210013.slx  stereo_ibvs_core_before_04_kinematics_20260723_210244.slx  stereo_ibvs_core_before_04_kinematics_20260723_212009.slx  stereo_ibvs_core_before_final_controller_20260723_165714.slx
simulink/ros2/: stereo_ibvs_core.slxc  stereo_ibvs_ros.slx  stereo_ibvs_ros2_stage1.slx  stereo_ibvs_ros2_stage1.slx.autosave  stereo_ibvs_ros2_stage1.slxc
simulink/ros2/backup/: stereo_ibvs_ros_backup_20260724_113859.slx  stereo_ibvs_ros_backup_20260724_114046.slx  stereo_ibvs_ros_backup_20260724_115424.slx  stereo_ibvs_ros_backup_20260724_120118.slx  stereo_ibvs_ros_backup_20260724_142021.slx  stereo_ibvs_ros_backup_20260724_143251.slx  stereo_ibvs_ros_backup_20260724_194225.slx
simulink/sim/: build_stereo_ibvs_sim_stage1.asv  build_stereo_ibvs_sim_stage1_clean.m  build_stereo_ibvs_sim_stage1_v2.m  plot_sim.mlx  plot_stereo_ibvs_sim_stage1_results.m  stereo_ibvs_sim_stage1.slx  stereo_ibvs_sim_stage1.slxc
simulink/slprj/_jitprj/: jitEngineAccessInfo.mat  sFgtleSx5iF58BvUR8VTeUB.l  sFgtleSx5iF58BvUR8VTeUB.mat  sKBh0O22OWGzhxDtxn33JwG.l  sKBh0O22OWGzhxDtxn33JwG.mat  sM05aHjZxe9Uu8T064Q1fAE.l  sM05aHjZxe9Uu8T064Q1fAE.mat  sON5fqpPUbU8zFhgJ86ZlgH.l  sON5fqpPUbU8zFhgJ86ZlgH.mat  sTMx7OTbfl2Rk4NnpNgYa7G.l  sTMx7OTbfl2Rk4NnpNgYa7G.mat  sUGv6X8fGUJZdUvoGe4iocH.l  sUGv6X8fGUJZdUvoGe4iocH.mat  si1vI6Z5dFlFgLdQ1KI3TkC.l  si1vI6Z5dFlFgLdQ1KI3TkC.mat  snhjSbEbIAPQQGH6RBLDRW.l  snhjSbEbIAPQQGH6RBLDRW.mat
simulink/test/: core_stage1_controller.m  original_stage1_controller.m  test_stage1_controller_equivalence.m
simulinkv2/: START_HERE.m  active_stereo_ibvs.slx  arm_stereo_ibvs_ekf_v1.slx  arm_stereo_ibvs_ekf_v1.slxc  build_arm_stereo_ibvs_ekf_v1.m  focal_mm_to_pixels.m  focal_pixels_to_mm.m  fr3.urdf  fr3_camera_kinematics.m  fr3_urdf_parse_report.txt  init_arm_stereo_ibvs_ekf_v1.m  load_fr3_urdf_parameters.m  model_build_log.txt  simulinkv2_report.md
simulinkv2/slprj/_jitprj/: jitEngineAccessInfo.mat  s18BtuQe6JSKrvuC1C0o30F.l  s18BtuQe6JSKrvuC1C0o30F.mat  s3tCPCDcskCHaTZzKVv5fpD.l  s3tCPCDcskCHaTZzKVv5fpD.mat  s78WTafw1Y0W979zd2Zpm8.l  s78WTafw1Y0W979zd2Zpm8.mat  s7DKOsBo1BfU9rrrkYT1pdF.l  s7DKOsBo1BfU9rrrkYT1pdF.mat  s9512eXlrYhgYLGCYsKugMH.l  (+33 more)
test/: test_safety.py  test_stereo_features.py  test_velocity_mapper.py
velocity_servo_tag/: setup.cfg  setup.py  velocity_command_node.py  velocity_mapper_node.py
velocity_servo_tag/config/: velocity_servo_tag.yaml
velocity_servo_tag/launch/: fr3_hardware.launch.py  full_system.launch.py  velocity_servo_tag.launch.py  vision_double.launch.py
velocity_servo_tag/resource/: velocity_servo_tag
velocity_servo_tag/test/: test_stereo_features.py
velocity_servo_tag/velocity_servo_tag/: __init__.py  robot_kinematics.py  safety.py
velocity_servo_tag/vision/: apriltag_detector.py  stereo_features.py  vision_double_node.py
velocity_servo_tag_interfaces/: CMakeLists.txt  package.xml
velocity_servo_tag_interfaces/msg/: StereoFeatures.msg
(+175 files in other folders)
